# passport-service

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENCE  README.md  docker-compose.yml  passport-service  pyproject.toml
.actions/base/: lib.sh  notify.sh
.gitea/workflows/: build.yaml
.github/: CODEOWNERS
.github/workflows/: autobump.yml  linting.yml  publish-icij-passport-core.yml  test-passport-service.yml
data/: .gitignore
data/workdir/: .gitignore
passport_service/: __init__.py  __main__.py  app.py  config.py  constants.py  exceptions.py  objects.py  typing_.py  utils.py
passport_service/core/: __init__.py  mrz.py  object_detection.py  pdf_conversion.py  preprocessing.py
passport_service/data/: .gitignore  default_country_codes.csv
passport_service/http_/: __init__.py  config.py  dependencies.py  main.py  passports.py  run.py  service.py  task_client.py  tasks.py
passport_service/tasks/: config.py  dependencies.py  inference.py  preprocessing.py
qa/: ruff.toml
scripts/: make_dynamic_model.py  preprocessing_entrypoint.sh
tests/: conftest.py  test_config.py  test_objects.py
tests/core/: test_mrz.py  test_object_detection.py  test_pdf_conversion.py  test_preprocessing.py
tests/data/: .gitignore
tests/data/passports/: not_a_passport  not_a_passport.json  passport.docx  passport.odt
tests/http_/: conftest.py  test_main.py  test_passports.py  test_tasks.py
tests/tasks/: test_tasks.py
