[project]
name = "icij-passport-core"
dynamic = ["version"]
description = "Passport detection"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "aiostream~=0.6",
  "icij-common~=0.8.3"
]

[project.urls]
Homepage = "https://github.com/ICIJ/passport-service"
Repository = "https://github.com/ICIJ/passport-service"
Issues = "https://github.com/ICIJ/passport-service/issues"

[project.optional-dependencies]
model-conversion = [
  "onnx~=1.18",
]
worker = [
  "icij-worker[amqp,postgres]~=0.19.5",
  "aio-pika==9.4.2",
  "aiormq==6.8.0",
]
http = [
  "aiohttp~=3.10",
  "fastapi~=0.111.1",
  "gunicorn~=22.0.0",
  "tenacity~=9.0.0",
]
inference = [
  "numpy~=1.26.4",
  "opencv-python~=4.10.0.84",
  "passporteye~=2.2.1",
  "pillow~=10.2",
  "pycountry~=23.12.11",
  "python-levenshtein~=0.23.0",
  # TODO: to avoid this, we need to conditionnally bypass the gotemberg client creation and hence need to read the
  # worker group in the deps workflow
  "tenacity~=9.0.0",
]
gpu = [
  "onnxruntime-gpu~=1.18.1",
]
cpu = [
  "onnxruntime~=1.18.1",
]
preprocessing = [
  "aiohttp~=3.10",
  "pillow~=10.2",
  "pymupdf~=1.24.7",
  "tenacity~=9.0.0",
]

[[tool.uv.index]]
name = "onnx-cuda12-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
explicit = true

[tool.uv.sources]
onnxruntime-gpu = { index = "onnx-cuda12-nightly" }

[dependency-groups]
dev = [
  "aiohttp",
  "black~=24.4.2",
  "pylint~=2.15.10",
  "pytest~=8.2.2",
  "pytest-asyncio~=0.21.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
pattern = "default-unprefixed"

[tool.hatch.build.targets.wheel]
only-include = [
  "passport_service/core",
  "passport_service/__init__.py",
  "passport_service/constants.py",
  "passport_service/exceptions.py",
  "passport_service/objects.py",
  "passport_service/typing_.py",
  "passport_service/utils.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "passport_service/core",
  "passport_service/__init__.py",
  "passport_service/constants.py",
  "passport_service/exceptions.py",
  "passport_service/objects.py",
  "passport_service/typing_.py",
  "passport_service/utils.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
